Refactor to use isEmpty and getFirst.